# mcp-android-ssh

./: .env.example  .env.template  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
src/: config.rs  error.rs  main.rs  tools.rs
src/ssh/: client.rs  mod.rs
