[package]
name = "mcp-android-ssh"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A high-performance MCP server for secure SSH access to Android devices via Termux"
repository = "https://github.com/vaknin/mcp-android-ssh"
homepage = "https://github.com/vaknin/mcp-android-ssh"
readme = "README.md"
keywords = ["android", "ssh", "mcp", "termux", "protocol"]
categories = ["command-line-utilities", "network-programming"]
authors = ["mcp-android-ssh contributors"]

[dependencies]
async-trait = "0.1.89"
dirs = "5.0.1"
rmcp = { version = "0.8.1", features = ["server", "transport-io", "macros"] }
russh = "0.54.6"
russh-keys = "0.49.2"
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
